[package]
name    = "audioplex"
version = "0.1.0"
edition = "2021"

[dependencies]
audioplex_implement = { path = "../audioplex_implement" }
thiserror           = "1.0.39"

[dependencies.uuid]
version  = "1.3.1"
features = ["v4"]

[dependencies.windows]
version = "0.44.0"
features = [
    "implement",
    "Win32_Media_Audio",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Devices_Properties",
    "Win32_Foundation",
    "Win32_System_Com_StructuredStorage",
]
